# ical-sports-parser

./: .env.openclaw.example  Cargo.toml  OPENCLAW_INTEGRATION.md  README.md  ical-sports-parser.code-workspace
deploy/systemd/: ical-sports-mcp.service
deploy/traefik/: ical-sports-mcp.dynamic.yml
scripts/: openclaw-ical-sports-parser.sh
src/: lib.rs  main.rs
