[package]
name = "ical-sports-parser"
version = "0.1.0"
edition = "2024"
default-run = "ical-sports-mcp"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
icalendar = { version = "0.17", features = ["parser", "recurrence"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"
